@@ -21,12 +21,11 @@ import static com.hedera.hapi.node.base.ResponseCodeEnum.INVALID_TRANSACTION_BOD
 import static com.hedera.hapi.node.base.ResponseCodeEnum.NOT_SUPPORTED;
 import static com.hedera.hapi.node.base.ResponseCodeEnum.SUCCESS;
 import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.FullResult.haltResult;
-import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.hts.HtsCall.PricedResult.gasOnly;
+import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.common.Call.PricedResult.gasOnly;
 import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.hts.ReturnTypes.encodedRc;
 import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.hts.transfer.ClassicTransfersTranslator.TRANSFER_TOKEN;
 import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.hts.transfer.TransferEventLoggingUtils.logSuccessfulFungibleTransfer;
 import static com.hedera.node.app.service.contract.impl.exec.systemcontracts.hts.transfer.TransferEventLoggingUtils.logSuccessfulNftTransfer;
-import static java.util.Collections.emptyList;
 import static java.util.Objects.requireNonNull;
 
 import com.hedera.hapi.node.base.AccountID;
@@ -37,7 +36,7 @@ import com.hedera.hapi.node.transaction.TransactionBody;
 import com.hedera.node.app.service.contract.impl.exec.gas.DispatchType;
 import com.hedera.node.app.service.contract.impl.exec.gas.SystemContractGasCalculator;
 import com.hedera.node.app.service.contract.impl.exec.scope.VerificationStrategy;
-import com.hedera.node.app.service.contract.impl.exec.systemcontracts.hts.AbstractHtsCall;
+import com.hedera.node.app.service.contract.impl.exec.systemcontracts.common.AbstractCall;
 import com.hedera.node.app.service.contract.impl.hevm.HederaWorldUpdater;
 import com.hedera.node.app.service.contract.impl.records.ContractCallRecordBuilder;
 import com.hedera.node.app.service.token.ReadableAccountStore;
@@ -66,7 +65,7 @@ import org.hyperledger.besu.evm.frame.MessageFrame;
  * </ol>
  * But the basic pattern of constructing and dispatching a synthetic {@link CryptoTransferTransactionBody} remains.
  */
-public class ClassicTransfersCall extends AbstractHtsCall {
+public class ClassicTransfersCall extends AbstractCall {
     private final byte[] selector;
     private final AccountID senderId;
     private final ResponseCodeEnum preemptingFailureStatus;
@@ -81,8 +80,8 @@ public class ClassicTransfersCall extends AbstractHtsCall {
 
     private final CallStatusStandardizer callStatusStandardizer;
     private final SystemAccountCreditScreen systemAccountCreditScreen;
-
     private final VerificationStrategy verificationStrategy;
+    private final SpecialRewardReceivers specialRewardReceivers;
 
     // too many parameters
     @SuppressWarnings("java:S107")
@@ -97,7 +96,8 @@ public class ClassicTransfersCall extends AbstractHtsCall {
             @Nullable ApprovalSwitchHelper approvalSwitchHelper,
             @NonNull final CallStatusStandardizer callStatusStandardizer,
             @NonNull final VerificationStrategy verificationStrategy,
-            @NonNull final SystemAccountCreditScreen systemAccountCreditScreen) {
+            @NonNull final SystemAccountCreditScreen systemAccountCreditScreen,
+            @NonNull final SpecialRewardReceivers specialRewardReceivers) {
         super(gasCalculator, enhancement, false);
         this.selector = requireNonNull(selector);
         this.senderId = requireNonNull(senderId);
@@ -108,6 +108,7 @@ public class ClassicTransfersCall extends AbstractHtsCall {
         this.callStatusStandardizer = requireNonNull(callStatusStandardizer);
         this.systemAccountCreditScreen = systemAccountCreditScreen;
         this.verificationStrategy = requireNonNull(verificationStrategy);
+        this.specialRewardReceivers = requireNonNull(specialRewardReceivers);
     }
 
     /**
@@ -154,6 +155,7 @@ public class ClassicTransfersCall extends AbstractHtsCall {
         final var op = transferToDispatch.cryptoTransferOrThrow();
         if (recordBuilder.status() == SUCCESS) {
             maybeEmitErcLogsFor(op, frame);
+            specialRewardReceivers.addInFrame(frame, op, recordBuilder.getAssessedCustomFees());
         } else {
             recordBuilder.status(callStatusStandardizer.codeForFailure(recordBuilder.status(), frame, op));
         }
@@ -168,7 +170,7 @@ public class ClassicTransfersCall extends AbstractHtsCall {
      * @param systemContractGasCalculator the gas calculator to use
      * @param enhancement the enhancement to use
      * @param payerId the payer of the transaction
-     * @param selector
+     * @param selector the selector of the call
      * @return the gas requirement for the transaction to be dispatched
      */
     public static long transferGasRequirement(
@@ -215,13 +217,12 @@ public class ClassicTransfersCall extends AbstractHtsCall {
             @NonNull final ReadableAccountStore extantAccounts,
             @NonNull final byte[] selector) {
         long minimumTinybarPrice = 0L;
-        final var numHbarAdjusts = op.transfersOrElse(TransferList.DEFAULT)
-                .accountAmountsOrElse(emptyList())
-                .size();
+        final var numHbarAdjusts =
+                op.transfersOrElse(TransferList.DEFAULT).accountAmounts().size();
         minimumTinybarPrice += numHbarAdjusts * baseHbarAdjustTinybarPrice;
         final Set<Bytes> aliasesToLazyCreate = new HashSet<>();
-        for (final var tokenTransfers : op.tokenTransfersOrElse(emptyList())) {
-            final var unitAdjusts = tokenTransfers.transfersOrElse(emptyList());
+        for (final var tokenTransfers : op.tokenTransfers()) {
+            final var unitAdjusts = tokenTransfers.transfers();
             // (FUTURE) Remove this divisor special case, done only for mono-service fidelity
             final var sizeDivisor = Arrays.equals(selector, TRANSFER_TOKEN.selector()) ? 2 : 1;
             minimumTinybarPrice += (unitAdjusts.size() / sizeDivisor) * baseUnitAdjustTinybarPrice;
@@ -235,7 +236,7 @@ public class ClassicTransfersCall extends AbstractHtsCall {
                     }
                 }
             }
-            final var nftTransfers = tokenTransfers.nftTransfersOrElse(emptyList());
+            final var nftTransfers = tokenTransfers.nftTransfers();
             minimumTinybarPrice += nftTransfers.size() * baseNftTransferTinybarPrice;
             for (final var nftTransfer : nftTransfers) {
                 if (nftTransfer.receiverAccountIDOrElse(AccountID.DEFAULT).hasAlias()) {
@@ -263,19 +264,13 @@ public class ClassicTransfersCall extends AbstractHtsCall {
     private void maybeEmitErcLogsFor(
             @NonNull final CryptoTransferTransactionBody op, @NonNull final MessageFrame frame) {
         if (Arrays.equals(ClassicTransfersTranslator.TRANSFER_FROM.selector(), selector)) {
-            final var fungibleTransfers = op.tokenTransfersOrThrow().get(0);
+            final var fungibleTransfers = op.tokenTransfers().getFirst();
             logSuccessfulFungibleTransfer(
-                    fungibleTransfers.tokenOrThrow(),
-                    fungibleTransfers.transfersOrThrow(),
-                    readableAccountStore(),
-                    frame);
+                    fungibleTransfers.tokenOrThrow(), fungibleTransfers.transfers(), readableAccountStore(), frame);
         } else if (Arrays.equals(ClassicTransfersTranslator.TRANSFER_NFT_FROM.selector(), selector)) {
-            final var nftTransfers = op.tokenTransfersOrThrow().get(0);
+            final var nftTransfers = op.tokenTransfers().getFirst();
             logSuccessfulNftTransfer(
-                    nftTransfers.tokenOrThrow(),
-                    nftTransfers.nftTransfersOrThrow().get(0),
-                    readableAccountStore(),
-                    frame);
+                    nftTransfers.tokenOrThrow(), nftTransfers.nftTransfers().getFirst(), readableAccountStore(), frame);
         }
     }
 }
