@@ -18,8 +18,10 @@ package com.hedera.services.bdd.suites.contract.traceability;
 
 import static com.hedera.node.app.service.evm.utils.EthSigsUtils.recoverAddressFromPubKey;
 import static com.hedera.services.bdd.junit.TestTags.SMART_CONTRACT;
+import static com.hedera.services.bdd.junit.hedera.NodeSelector.byNodeId;
 import static com.hedera.services.bdd.spec.HapiPropertySource.asContract;
 import static com.hedera.services.bdd.spec.HapiSpec.defaultHapiSpec;
+import static com.hedera.services.bdd.spec.HapiSpec.hapiTest;
 import static com.hedera.services.bdd.spec.HapiSpec.propertyPreservingHapiSpec;
 import static com.hedera.services.bdd.spec.assertions.AccountInfoAsserts.accountWith;
 import static com.hedera.services.bdd.spec.queries.QueryVerbs.contractCallLocal;
@@ -38,34 +40,46 @@ import static com.hedera.services.bdd.spec.transactions.TxnVerbs.mintToken;
 import static com.hedera.services.bdd.spec.transactions.TxnVerbs.tokenCreate;
 import static com.hedera.services.bdd.spec.transactions.TxnVerbs.uploadInitCode;
 import static com.hedera.services.bdd.spec.transactions.contract.HapiParserUtil.asHeadlongAddress;
-import static com.hedera.services.bdd.spec.transactions.contract.HapiParserUtil.stripSelector;
 import static com.hedera.services.bdd.spec.transactions.crypto.HapiCryptoTransfer.tinyBarsFromAccountToAlias;
 import static com.hedera.services.bdd.spec.transactions.token.TokenMovement.movingUnique;
 import static com.hedera.services.bdd.spec.utilops.CustomSpecAssert.allRunFor;
-import static com.hedera.services.bdd.spec.utilops.UtilStateChange.stateChangesToGrpc;
-import static com.hedera.services.bdd.spec.utilops.UtilVerbs.assertionsHold;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.GLOBAL_WATCHER;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.expectContractActionSidecarFor;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.expectContractBytecodeSansInitcodeFor;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.expectContractBytecodeSidecarFor;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.expectContractStateChangesSidecarFor;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.expectExplicitContractBytecode;
+import static com.hedera.services.bdd.spec.utilops.SidecarVerbs.expectFailedContractBytecodeSidecarFor;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.newKeyNamed;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overriding;
-import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overridingThree;
-import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overridingTwo;
+import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overridingAllOf;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.sourcing;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.withOpContext;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.ALLOW_SKIPPED_ENTITY_IDS;
+import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.FULLY_NONDETERMINISTIC;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.HIGHLY_NON_DETERMINISTIC_FEES;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.NONDETERMINISTIC_CONTRACT_CALL_RESULTS;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.NONDETERMINISTIC_ETHEREUM_DATA;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.NONDETERMINISTIC_FUNCTION_PARAMETERS;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.NONDETERMINISTIC_NONCE;
 import static com.hedera.services.bdd.spec.utilops.records.SnapshotMatchMode.NONDETERMINISTIC_TRANSACTION_FEES;
-import static com.hedera.services.bdd.spec.utilops.streams.assertions.EventualRecordStreamAssertion.recordStreamLocFor;
-import static com.hedera.services.bdd.suites.contract.Utils.FunctionType;
+import static com.hedera.services.bdd.suites.HapiSuite.DEFAULT_PAYER;
+import static com.hedera.services.bdd.suites.HapiSuite.EMPTY_KEY;
+import static com.hedera.services.bdd.suites.HapiSuite.FIVE_HBARS;
+import static com.hedera.services.bdd.suites.HapiSuite.GENESIS;
+import static com.hedera.services.bdd.suites.HapiSuite.MAX_UINT256_VALUE;
+import static com.hedera.services.bdd.suites.HapiSuite.ONE_HBAR;
+import static com.hedera.services.bdd.suites.HapiSuite.ONE_HUNDRED_HBARS;
+import static com.hedera.services.bdd.suites.HapiSuite.ONE_MILLION_HBARS;
+import static com.hedera.services.bdd.suites.HapiSuite.RELAYER;
+import static com.hedera.services.bdd.suites.HapiSuite.SECP_256K1_SHAPE;
+import static com.hedera.services.bdd.suites.HapiSuite.SECP_256K1_SOURCE_KEY;
+import static com.hedera.services.bdd.suites.HapiSuite.TOKEN_TREASURY;
 import static com.hedera.services.bdd.suites.contract.Utils.aaWith;
 import static com.hedera.services.bdd.suites.contract.Utils.asAddress;
-import static com.hedera.services.bdd.suites.contract.Utils.asSolidityAddress;
 import static com.hedera.services.bdd.suites.contract.Utils.asToken;
 import static com.hedera.services.bdd.suites.contract.Utils.captureOneChildCreate2MetaFor;
 import static com.hedera.services.bdd.suites.contract.Utils.extractBytecodeUnhexed;
-import static com.hedera.services.bdd.suites.contract.Utils.getABIFor;
 import static com.hedera.services.bdd.suites.contract.Utils.getNestedContractAddress;
 import static com.hedera.services.bdd.suites.contract.Utils.getResourcePath;
 import static com.hedera.services.bdd.suites.contract.opcodes.Create2OperationSuite.CONTRACT_REPORTED_ADDRESS_MESSAGE;
@@ -74,6 +88,11 @@ import static com.hedera.services.bdd.suites.contract.opcodes.Create2OperationSu
 import static com.hedera.services.bdd.suites.contract.opcodes.Create2OperationSuite.EXPECTED_CREATE2_ADDRESS_MESSAGE;
 import static com.hedera.services.bdd.suites.contract.opcodes.Create2OperationSuite.GET_ADDRESS;
 import static com.hedera.services.bdd.suites.contract.opcodes.Create2OperationSuite.GET_BYTECODE;
+import static com.hedera.services.bdd.suites.contract.traceability.EncodingUtils.encodeFunctionCall;
+import static com.hedera.services.bdd.suites.contract.traceability.EncodingUtils.encodeTuple;
+import static com.hedera.services.bdd.suites.contract.traceability.EncodingUtils.formattedAssertionValue;
+import static com.hedera.services.bdd.suites.contract.traceability.EncodingUtils.hexedSolidityAddressToHeadlongAddress;
+import static com.hedera.services.bdd.suites.contract.traceability.EncodingUtils.uint256ReturnWithValue;
 import static com.hedera.services.bdd.suites.crypto.AutoAccountCreationSuite.PARTY;
 import static com.hedera.services.bdd.suites.token.TokenAssociationSpecs.MULTI_KEY;
 import static com.hedera.services.stream.proto.ContractActionType.CALL;
@@ -86,42 +105,32 @@ import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_SOLIDI
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.SUCCESS;
 import static com.hederahashgraph.api.proto.java.TokenType.NON_FUNGIBLE_UNIQUE;
 import static com.swirlds.common.utility.CommonUtils.hex;
+import static java.util.Objects.requireNonNull;
 import static org.hyperledger.besu.crypto.Hash.keccak256;
-import static org.hyperledger.besu.evm.frame.ExceptionalHaltReason.DefaultExceptionalHaltReason.PRECOMPILE_ERROR;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.esaulpaugh.headlong.abi.Address;
 import com.esaulpaugh.headlong.abi.Function;
-import com.esaulpaugh.headlong.abi.Tuple;
-import com.esaulpaugh.headlong.abi.TupleType;
 import com.google.common.hash.Hashing;
 import com.google.protobuf.ByteString;
 import com.hedera.node.app.hapi.utils.ByteStringUtils;
 import com.hedera.node.app.hapi.utils.ethereum.EthTxData;
 import com.hedera.node.app.hapi.utils.ethereum.EthTxData.EthTransactionType;
 import com.hedera.services.bdd.junit.HapiTest;
-import com.hedera.services.bdd.junit.HapiTestSuite;
+import com.hedera.services.bdd.junit.HapiTestLifecycle;
+import com.hedera.services.bdd.junit.OrderedInIsolation;
+import com.hedera.services.bdd.junit.support.SpecManager;
 import com.hedera.services.bdd.spec.HapiPropertySource;
-import com.hedera.services.bdd.spec.HapiSpec;
 import com.hedera.services.bdd.spec.assertions.StateChange;
 import com.hedera.services.bdd.spec.assertions.StorageChange;
 import com.hedera.services.bdd.spec.queries.meta.HapiGetTxnRecord;
 import com.hedera.services.bdd.spec.transactions.TxnUtils;
 import com.hedera.services.bdd.spec.transactions.TxnVerbs;
 import com.hedera.services.bdd.spec.transactions.contract.HapiParserUtil;
-import com.hedera.services.bdd.spec.utilops.CustomSpecAssert;
-import com.hedera.services.bdd.spec.verification.traceability.ExpectedSidecar;
 import com.hedera.services.bdd.spec.verification.traceability.SidecarWatcher;
-import com.hedera.services.bdd.suites.HapiSuite;
 import com.hedera.services.stream.proto.CallOperationType;
 import com.hedera.services.stream.proto.ContractAction;
-import com.hedera.services.stream.proto.ContractActions;
-import com.hedera.services.stream.proto.ContractBytecode;
-import com.hedera.services.stream.proto.ContractStateChanges;
-import com.hedera.services.stream.proto.TransactionSidecarRecord;
 import com.hederahashgraph.api.proto.java.AccountID;
 import com.hederahashgraph.api.proto.java.ContractID;
-import com.hederahashgraph.api.proto.java.Timestamp;
 import com.hederahashgraph.api.proto.java.TokenID;
 import com.hederahashgraph.api.proto.java.TokenType;
 import com.hederahashgraph.api.proto.java.TransferList;
@@ -129,29 +138,27 @@ import com.swirlds.common.utility.CommonUtils;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.tuweni.bytes.Bytes;
-import org.apache.tuweni.units.bigints.UInt256;
-import org.junit.jupiter.api.MethodOrderer;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Tag;
-import org.junit.jupiter.api.TestMethodOrder;
 
-@HapiTestSuite(fuzzyMatch = true)
-@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
+@HapiTestLifecycle
+@OrderedInIsolation
 @Tag(SMART_CONTRACT)
-public class TraceabilitySuite extends HapiSuite {
+public class TraceabilitySuite {
 
     private static final Logger log = LogManager.getLogger(TraceabilitySuite.class);
 
-    private static SidecarWatcher sidecarWatcher;
     private static final ByteString EMPTY = ByteStringUtils.wrapUnsafely(new byte[0]);
     private static final ByteString CALL_CODE_INPUT_SUFFIX = ByteStringUtils.wrapUnsafely(new byte[28]);
     private static final String TRACEABILITY = "Traceability";
@@ -174,63 +181,18 @@ public class TraceabilitySuite extends HapiSuite {
     private static final String AUTO_ACCOUNT_TXN = "autoAccount";
     private static final String CHAIN_ID_PROPERTY = "contracts.chainId";
     private static final String LAZY_CREATE_PROPERTY = "lazyCreation.enabled";
-    private static final String RUNTIME_CODE = "runtimeBytecode";
     public static final String SIDECARS_PROP = "contracts.sidecars";
 
-    public static void main(final String... args) {
-        new TraceabilitySuite().runSuiteSync();
-    }
-
-    @SuppressWarnings("java:S5960")
-    @Override
-    public List<HapiSpec> getSpecsInSuite() {
-        return List.of(
-                suiteSetup(),
-                traceabilityE2EScenario1(),
-                traceabilityE2EScenario2(),
-                traceabilityE2EScenario3(),
-                traceabilityE2EScenario4(),
-                traceabilityE2EScenario5(),
-                traceabilityE2EScenario6(),
-                traceabilityE2EScenario7(),
-                traceabilityE2EScenario8(),
-                traceabilityE2EScenario9(),
-                traceabilityE2EScenario10(),
-                traceabilityE2EScenario11(),
-                traceabilityE2EScenario12(),
-                traceabilityE2EScenario13(),
-                traceabilityE2EScenario14(),
-                traceabilityE2EScenario15(),
-                traceabilityE2EScenario16(),
-                traceabilityE2EScenario17(),
-                traceabilityE2EScenario18(),
-                traceabilityE2EScenario19(),
-                traceabilityE2EScenario20(),
-                traceabilityE2EScenario21(),
-                vanillaBytecodeSidecar(),
-                vanillaBytecodeSidecar2(),
-                actionsShowPropagatedRevert(),
-                ethereumLazyCreateExportsExpectedSidecars(),
-                hollowAccountCreate2MergeExportsExpectedSidecars(),
-                assertSidecars());
+    @BeforeAll
+    static void beforeAll(@NonNull final SpecManager specManager) throws Throwable {
+        specManager.setup(
+                withOpContext((spec, opLog) -> GLOBAL_WATCHER.set(new SidecarWatcher(spec.streamsLoc(byNodeId(0))))),
+                overriding("contracts.enforceCreationThrottle", "false"));
     }
 
     @HapiTest
     @Order(1)
-    final HapiSpec suiteSetup() {
-        return defaultHapiSpec("suiteSetup")
-                .given()
-                .when()
-                .then(
-                        overridingTwo(
-                                "contracts.throttle.throttleByGas", "false",
-                                "contracts.enforceCreationThrottle", "false"),
-                        withOpContext((spec, opLog) -> initializeWatcherOf(recordStreamLocFor(spec))));
-    }
-
-    @HapiTest
-    @Order(2)
-    final HapiSpec traceabilityE2EScenario1() {
+    final Stream<DynamicTest> traceabilityE2EScenario1() {
         return defaultHapiSpec(
                         "traceabilityE2EScenario1",
                         NONDETERMINISTIC_FUNCTION_PARAMETERS,
@@ -603,8 +565,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(3)
-    final HapiSpec traceabilityE2EScenario2() {
+    @Order(2)
+    final Stream<DynamicTest> traceabilityE2EScenario2() {
         return defaultHapiSpec(
                         "traceabilityE2EScenario2",
                         NONDETERMINISTIC_FUNCTION_PARAMETERS,
@@ -1011,8 +973,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(4)
-    final HapiSpec traceabilityE2EScenario3() {
+    @Order(3)
+    final Stream<DynamicTest> traceabilityE2EScenario3() {
         return defaultHapiSpec(
                         "traceabilityE2EScenario3", NONDETERMINISTIC_FUNCTION_PARAMETERS, HIGHLY_NON_DETERMINISTIC_FEES)
                 .given(
@@ -1421,8 +1383,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(5)
-    final HapiSpec traceabilityE2EScenario4() {
+    @Order(4)
+    final Stream<DynamicTest> traceabilityE2EScenario4() {
         return defaultHapiSpec(
                         "traceabilityE2EScenario4", NONDETERMINISTIC_FUNCTION_PARAMETERS, HIGHLY_NON_DETERMINISTIC_FEES)
                 .given(
@@ -1714,9 +1676,9 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(6)
-    final HapiSpec traceabilityE2EScenario5() {
-        return defaultHapiSpec("traceabilityE2EScenario5", NONDETERMINISTIC_FUNCTION_PARAMETERS)
+    @Order(5)
+    final Stream<DynamicTest> traceabilityE2EScenario5() {
+        return defaultHapiSpec("traceabilityE2EScenario5", FULLY_NONDETERMINISTIC)
                 .given(
                         uploadInitCode(TRACEABILITY),
                         contractCreate(TRACEABILITY, BigInteger.valueOf(55), BigInteger.TWO, BigInteger.TWO)
@@ -2020,12 +1982,9 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(7)
-    final HapiSpec traceabilityE2EScenario6() {
-        return defaultHapiSpec(
-                        "traceabilityE2EScenario6",
-                        NONDETERMINISTIC_FUNCTION_PARAMETERS,
-                        NONDETERMINISTIC_TRANSACTION_FEES)
+    @Order(6)
+    final Stream<DynamicTest> traceabilityE2EScenario6() {
+        return defaultHapiSpec("traceabilityE2EScenario6", FULLY_NONDETERMINISTIC)
                 .given(
                         uploadInitCode(TRACEABILITY),
                         contractCreate(TRACEABILITY, BigInteger.TWO, BigInteger.valueOf(3), BigInteger.valueOf(4))
@@ -2359,8 +2318,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(8)
-    final HapiSpec traceabilityE2EScenario7() {
+    @Order(7)
+    final Stream<DynamicTest> traceabilityE2EScenario7() {
         return defaultHapiSpec("traceabilityE2EScenario7", NONDETERMINISTIC_FUNCTION_PARAMETERS)
                 .given(
                         uploadInitCode(TRACEABILITY_CALLCODE),
@@ -2750,9 +2709,12 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(9)
-    final HapiSpec traceabilityE2EScenario8() {
-        return defaultHapiSpec("traceabilityE2EScenario8", NONDETERMINISTIC_FUNCTION_PARAMETERS)
+    @Order(8)
+    final Stream<DynamicTest> traceabilityE2EScenario8() {
+        return defaultHapiSpec(
+                        "traceabilityE2EScenario8",
+                        NONDETERMINISTIC_FUNCTION_PARAMETERS,
+                        NONDETERMINISTIC_TRANSACTION_FEES)
                 .given(
                         uploadInitCode(TRACEABILITY_CALLCODE),
                         contractCreate(TRACEABILITY_CALLCODE, BigInteger.valueOf(55), BigInteger.TWO, BigInteger.TWO)
@@ -3102,10 +3064,9 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(10)
-    final HapiSpec traceabilityE2EScenario9() {
-        return defaultHapiSpec(
-                        "traceabilityE2EScenario9", NONDETERMINISTIC_FUNCTION_PARAMETERS, HIGHLY_NON_DETERMINISTIC_FEES)
+    @Order(9)
+    final Stream<DynamicTest> traceabilityE2EScenario9() {
+        return defaultHapiSpec("traceabilityE2EScenario9", FULLY_NONDETERMINISTIC)
                 .given(
                         uploadInitCode(TRACEABILITY),
                         contractCreate(TRACEABILITY, BigInteger.valueOf(55), BigInteger.TWO, BigInteger.TWO)
@@ -3410,9 +3371,12 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(11)
-    final HapiSpec traceabilityE2EScenario10() {
-        return defaultHapiSpec("traceabilityE2EScenario10", NONDETERMINISTIC_FUNCTION_PARAMETERS)
+    @Order(10)
+    final Stream<DynamicTest> traceabilityE2EScenario10() {
+        return defaultHapiSpec(
+                        "traceabilityE2EScenario10",
+                        NONDETERMINISTIC_FUNCTION_PARAMETERS,
+                        NONDETERMINISTIC_TRANSACTION_FEES)
                 .given(
                         uploadInitCode(TRACEABILITY),
                         contractCreate(TRACEABILITY, BigInteger.TWO, BigInteger.valueOf(3), BigInteger.valueOf(4))
@@ -3753,8 +3717,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(12)
-    final HapiSpec traceabilityE2EScenario11() {
+    @Order(11)
+    final Stream<DynamicTest> traceabilityE2EScenario11() {
         return defaultHapiSpec("traceabilityE2EScenario11", NONDETERMINISTIC_FUNCTION_PARAMETERS)
                 .given(
                         uploadInitCode(TRACEABILITY),
@@ -4031,8 +3995,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(13)
-    final HapiSpec traceabilityE2EScenario12() {
+    @Order(12)
+    final Stream<DynamicTest> traceabilityE2EScenario12() {
         final var contract = "CreateTrivial";
         final var scenario12 = "traceabilityE2EScenario12";
         return defaultHapiSpec(scenario12)
@@ -4060,14 +4024,14 @@ public class TraceabilitySuite extends HapiSuite {
                                                     .setOutput(EMPTY)
                                                     .build())));
                         }),
-                        expectContractBytecode(TRACEABILITY_TXN, contract));
+                        expectContractBytecodeSansInitcodeFor(TRACEABILITY_TXN, contract));
     }
 
     @HapiTest
-    @Order(14)
-    HapiSpec traceabilityE2EScenario13() {
+    @Order(13)
+    final Stream<DynamicTest> traceabilityE2EScenario13() {
         final AtomicReference<AccountID> accountIDAtomicReference = new AtomicReference<>();
-        return defaultHapiSpec("traceabilityE2EScenario13", NONDETERMINISTIC_ETHEREUM_DATA, NONDETERMINISTIC_NONCE)
+        return defaultHapiSpec("traceabilityE2EScenario13", FULLY_NONDETERMINISTIC)
                 .given(
                         newKeyNamed(SECP_256K1_SOURCE_KEY).shape(SECP_256K1_SHAPE),
                         cryptoCreate(RELAYER).balance(6 * ONE_MILLION_HBARS),
@@ -4104,14 +4068,15 @@ public class TraceabilitySuite extends HapiSuite {
                                                     .setOutput(EMPTY)
                                                     .build())));
                         }),
-                        expectContractBytecodeWithMinimalFieldsSidecarFor(FIRST_CREATE_TXN, PAY_RECEIVABLE_CONTRACT));
+                        // The bytecode is externalized along with the synthetic ContractCreate
+                        // child following the top-level EthereumTransaction record (index=1)
+                        expectContractBytecodeSansInitcodeFor(FIRST_CREATE_TXN, 1, PAY_RECEIVABLE_CONTRACT));
     }
 
     @HapiTest
-    @Order(15)
-    final HapiSpec traceabilityE2EScenario14() {
-        return defaultHapiSpec(
-                        "traceabilityE2EScenario14", NONDETERMINISTIC_ETHEREUM_DATA, NONDETERMINISTIC_TRANSACTION_FEES)
+    @Order(14)
+    final Stream<DynamicTest> traceabilityE2EScenario14() {
+        return defaultHapiSpec("traceabilityE2EScenario14", FULLY_NONDETERMINISTIC)
                 .given(
                         newKeyNamed(SECP_256K1_SOURCE_KEY).shape(SECP_256K1_SHAPE),
                         cryptoCreate(RELAYER).balance(6 * ONE_MILLION_HBARS),
@@ -4147,14 +4112,15 @@ public class TraceabilitySuite extends HapiSuite {
                                             .setGasUsed(135)
                                             .setOutput(EMPTY)
                                             .build())),
-                            expectContractBytecodeWithMinimalFieldsSidecarFor(
-                                    TRACEABILITY_TXN, PAY_RECEIVABLE_CONTRACT));
+                            // The bytecode is externalized along with the synthetic ContractCreate
+                            // child following the top-level EthereumTransaction record (index=1)
+                            expectContractBytecodeSansInitcodeFor(TRACEABILITY_TXN, 1, PAY_RECEIVABLE_CONTRACT));
                 }));
     }
 
     @HapiTest
-    @Order(16)
-    HapiSpec traceabilityE2EScenario15() {
+    @Order(15)
+    final Stream<DynamicTest> traceabilityE2EScenario15() {
         final String GET_BYTECODE = "getBytecode";
         final String DEPLOY = "deploy";
         final var CREATE_2_TXN = "Create2Txn";
@@ -4228,8 +4194,9 @@ public class TraceabilitySuite extends HapiSuite {
                                     .setContractNum(parentId.getContractNum() + 1L)
                                     .build();
                             mirrorLiteralId.set("0.0." + childId.getContractNum());
-                            final var topLevelCallTxnRecord =
-                                    getTxnRecord(CREATE_2_TXN).andAllChildRecords();
+                            final var topLevelCallTxnRecord = getTxnRecord(CREATE_2_TXN)
+                                    .andAllChildRecords()
+                                    .logged();
                             final var hapiGetContractBytecode = getContractBytecode(mirrorLiteralId.get())
                                     .exposingBytecodeTo(bytecodeFromMirror::set);
                             allRunFor(
@@ -4263,7 +4230,7 @@ public class TraceabilitySuite extends HapiSuite {
                                                             .setRecipientContract(
                                                                     spec.registry()
                                                                             .getContractId(contract))
-                                                            .setGasUsed(80135)
+                                                            .setGasUsed(80193)
                                                             .setOutput(EMPTY)
                                                             .setInput(
                                                                     encodeFunctionCall(
@@ -4278,7 +4245,7 @@ public class TraceabilitySuite extends HapiSuite {
                                                             .setCallingContract(
                                                                     spec.registry()
                                                                             .getContractId(contract))
-                                                            .setGas(3870609)
+                                                            .setGas(3870552)
                                                             .setRecipientContract(childId)
                                                             .setGasUsed(44936)
                                                             .setValue(tcValue)
@@ -4286,29 +4253,28 @@ public class TraceabilitySuite extends HapiSuite {
                                                             .setCallDepth(1)
                                                             .build())),
                                     hapiGetContractBytecode);
-                            expectContractBytecode(
-                                    specName,
-                                    topLevelCallTxnRecord
-                                            .getFirstNonStakingChildRecord()
-                                            .getConsensusTimestamp(),
-                                    asContract(mirrorLiteralId.get()),
-                                    ByteStringUtils.wrapUnsafely(testContractInitcode.get()),
-                                    ByteStringUtils.wrapUnsafely(bytecodeFromMirror.get()));
+                            allRunFor(
+                                    spec,
+                                    // The bytecode is externalized along with the synthetic ContractCreate
+                                    // child corresponding to the internal creation (index=1)
+                                    expectExplicitContractBytecode(
+                                            CREATE_2_TXN,
+                                            1,
+                                            asContract(mirrorLiteralId.get()),
+                                            ByteStringUtils.wrapUnsafely(testContractInitcode.get()),
+                                            ByteStringUtils.wrapUnsafely(bytecodeFromMirror.get())));
                         }))
                 .then();
     }
 
     @HapiTest
-    @Order(17)
-    HapiSpec traceabilityE2EScenario16() {
+    @Order(16)
+    final Stream<DynamicTest> traceabilityE2EScenario16() {
         final AtomicReference<TokenID> vanillaTokenID = new AtomicReference<>();
         final String PRECOMPILE_CALLER = "PrecompileCaller";
         final String txn = "payTxn";
         final String toHash = "toHash";
-        return defaultHapiSpec(
-                        "traceabilityE2EScenario16",
-                        NONDETERMINISTIC_FUNCTION_PARAMETERS,
-                        NONDETERMINISTIC_TRANSACTION_FEES)
+        return defaultHapiSpec("traceabilityE2EScenario16", FULLY_NONDETERMINISTIC)
                 .given(
                         tokenCreate("goodToken")
                                 .tokenType(TokenType.FUNGIBLE_COMMON)
@@ -4412,8 +4378,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(18)
-    final HapiSpec traceabilityE2EScenario17() {
+    @Order(17)
+    final Stream<DynamicTest> traceabilityE2EScenario17() {
         return defaultHapiSpec("traceabilityE2EScenario17")
                 .given(
                         uploadInitCode(REVERTING_CONTRACT),
@@ -4471,8 +4437,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(19)
-    final HapiSpec traceabilityE2EScenario18() {
+    @Order(18)
+    final Stream<DynamicTest> traceabilityE2EScenario18() {
         return defaultHapiSpec("traceabilityE2EScenario18")
                 .given(uploadInitCode(REVERTING_CONTRACT))
                 .when(contractCreate(REVERTING_CONTRACT, BigInteger.valueOf(4))
@@ -4496,13 +4462,12 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(20)
-    HapiSpec traceabilityE2EScenario19() {
+    @Order(19)
+    final Stream<DynamicTest> traceabilityE2EScenario19() {
         final var RECEIVER = "RECEIVER";
         final var hbarsToSend = 1;
         final var transferTxn = "payTxn";
-        return defaultHapiSpec(
-                        "traceabilityE2EScenario19", NONDETERMINISTIC_ETHEREUM_DATA, NONDETERMINISTIC_TRANSACTION_FEES)
+        return defaultHapiSpec("traceabilityE2EScenario19", FULLY_NONDETERMINISTIC)
                 .given(
                         newKeyNamed(SECP_256K1_SOURCE_KEY).shape(SECP_256K1_SHAPE),
                         cryptoCreate(RECEIVER).balance(0L),
@@ -4541,9 +4506,9 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(21)
-    final HapiSpec traceabilityE2EScenario20() {
-        return defaultHapiSpec("traceabilityE2EScenario20", NONDETERMINISTIC_TRANSACTION_FEES)
+    @Order(20)
+    final Stream<DynamicTest> traceabilityE2EScenario20() {
+        return defaultHapiSpec("traceabilityE2EScenario20", HIGHLY_NON_DETERMINISTIC_FEES)
                 .given(uploadInitCode(REVERTING_CONTRACT))
                 .when(contractCreate(REVERTING_CONTRACT, BigInteger.valueOf(6))
                         .via(FIRST_CREATE_TXN)
@@ -4567,9 +4532,9 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(22)
-    final HapiSpec traceabilityE2EScenario21() {
-        return defaultHapiSpec("traceabilityE2EScenario21")
+    @Order(21)
+    final Stream<DynamicTest> traceabilityE2EScenario21() {
+        return defaultHapiSpec("traceabilityE2EScenario21", FULLY_NONDETERMINISTIC)
                 .given(
                         uploadInitCode(REVERTING_CONTRACT),
                         contractCreate(REVERTING_CONTRACT, BigInteger.valueOf(6))
@@ -4618,18 +4583,21 @@ public class TraceabilitySuite extends HapiSuite {
                                                 .setInput(encodeFunctionCall(REVERTING_CONTRACT, "callingWrongAddress"))
                                                 .build(),
                                         ContractAction.newBuilder()
-                                                .setCallType(CALL)
+                                                .setCallType(PRECOMPILE)
                                                 .setCallingContract(
                                                         spec.registry().getContractId(REVERTING_CONTRACT))
                                                 .setCallOperationType(CallOperationType.OP_CALL)
                                                 .setCallDepth(1)
-                                                .setGas(960576)
                                                 .setInput(ByteStringUtils.wrapUnsafely(
                                                         Function.parse("boo" + "(uint256)")
                                                                 .encodeCallWithArgs(BigInteger.valueOf(234))
                                                                 .array()))
+                                                .setGas(960576)
                                                 .setGasUsed(960576)
-                                                .setError(ByteString.copyFromUtf8(PRECOMPILE_ERROR.name()))
+                                                .setRecipientContract(ContractID.newBuilder()
+                                                        .setContractNum(0)
+                                                        .build())
+                                                .setOutput(EMPTY)
                                                 /*
                                                    For EVM v0.34 use this code block instead:
 
@@ -4637,13 +4605,12 @@ public class TraceabilitySuite extends HapiSuite {
                                                 .setError(ByteString.copyFromUtf8(INVALID_SOLIDITY_ADDRESS.name()))
 
                                                 */
-                                                .setTargetedAddress(ByteString.copyFrom(asSolidityAddress(0, 0, 0)))
                                                 .build())))));
     }
 
     @HapiTest
-    @Order(23)
-    final HapiSpec vanillaBytecodeSidecar() {
+    @Order(22)
+    final Stream<DynamicTest> vanillaBytecodeSidecar() {
         final var EMPTY_CONSTRUCTOR_CONTRACT = "EmptyConstructor";
         final var vanillaBytecodeSidecar = "vanillaBytecodeSidecar";
         final var firstTxn = "firstTxn";
@@ -4677,8 +4644,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(24)
-    final HapiSpec vanillaBytecodeSidecar2() {
+    @Order(23)
+    final Stream<DynamicTest> vanillaBytecodeSidecar2() {
         final var contract = "CreateTrivial";
         final String trivialCreate = "vanillaBytecodeSidecar2";
         final var firstTxn = "firstTxn";
@@ -4709,8 +4676,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(25)
-    final HapiSpec actionsShowPropagatedRevert() {
+    @Order(24)
+    final Stream<DynamicTest> actionsShowPropagatedRevert() {
         final var APPROVE_BY_DELEGATE = "ApproveByDelegateCall";
         final var badApproval = "BadApproval";
         final var somebody = "somebody";
@@ -4892,8 +4859,8 @@ public class TraceabilitySuite extends HapiSuite {
     }
 
     @HapiTest
-    @Order(26)
-    final HapiSpec ethereumLazyCreateExportsExpectedSidecars() {
+    @Order(25)
+    final Stream<DynamicTest> ethereumLazyCreateExportsExpectedSidecars() {
         final var RECIPIENT_KEY = "lazyAccountRecipient";
         final var RECIPIENT_KEY2 = "lazyAccountRecipient2";
         final var lazyCreateTxn = "lazyCreateTxn";
@@ -4903,16 +4870,17 @@ public class TraceabilitySuite extends HapiSuite {
                         "ethereumLazyCreateExportsExpectedSidecars",
                         NONDETERMINISTIC_ETHEREUM_DATA,
                         NONDETERMINISTIC_NONCE,
-                        ALLOW_SKIPPED_ENTITY_IDS)
+                        ALLOW_SKIPPED_ENTITY_IDS,
+                        NONDETERMINISTIC_CONTRACT_CALL_RESULTS)
                 .preserving(CHAIN_ID_PROPERTY, LAZY_CREATE_PROPERTY, "contracts.evm.version")
                 .given(
-                        overridingThree(
+                        overridingAllOf(Map.of(
                                 CHAIN_ID_PROPERTY,
                                 "298",
                                 LAZY_CREATE_PROPERTY,
                                 "true",
                                 "contracts.evm.version",
-                                "v0.34"),
+                                "v0.34")),
                         newKeyNamed(SECP_256K1_SOURCE_KEY).shape(SECP_256K1_SHAPE),
                         newKeyNamed(RECIPIENT_KEY).shape(SECP_256K1_SHAPE),
                         newKeyNamed(RECIPIENT_KEY2).shape(SECP_256K1_SHAPE),
@@ -4989,8 +4957,8 @@ public class TraceabilitySuite extends HapiSuite {
 
     @SuppressWarnings("java:S5960")
     @HapiTest
-    @Order(27)
-    final HapiSpec hollowAccountCreate2MergeExportsExpectedSidecars() {
+    @Order(26)
+    final Stream<DynamicTest> hollowAccountCreate2MergeExportsExpectedSidecars() {
         final var tcValue = 1_234L;
         final var create2Factory = "Create2Factory";
         final var creation = "creation";
@@ -5062,7 +5030,7 @@ public class TraceabilitySuite extends HapiSuite {
                                 .via(creation),
                         getTxnRecord(creation)
                                 .andAllChildRecords()
-                                .exposingCreationsTo(l -> hollowCreationAddress.set(l.get(0))),
+                                .exposingCreationsTo(l -> hollowCreationAddress.set(l.getFirst())),
                         // save the id of the hollow account
                         sourcing(() -> getAccountInfo(hollowCreationAddress.get())
                                 .logged()
@@ -5087,11 +5055,8 @@ public class TraceabilitySuite extends HapiSuite {
                             final AtomicReference<byte[]> mergedContractBytecode = new AtomicReference<>();
                             final var hapiGetContractBytecode = getContractBytecode(mergedContractIdAsString)
                                     .exposingBytecodeTo(mergedContractBytecode::set);
-                            final var topLevelCallTxnRecord =
-                                    getTxnRecord(CREATE_2_TXN).andAllChildRecords();
                             allRunFor(
                                     spec,
-                                    topLevelCallTxnRecord,
                                     expectContractStateChangesSidecarFor(
                                             CREATE_2_TXN,
                                             List.of(
@@ -5125,7 +5090,7 @@ public class TraceabilitySuite extends HapiSuite {
                                                             .setRecipientContract(
                                                                     spec.registry()
                                                                             .getContractId(create2Factory))
-                                                            .setGasUsed(80135)
+                                                            .setGasUsed(80193)
                                                             .setOutput(EMPTY)
                                                             .setInput(
                                                                     encodeFunctionCall(
@@ -5140,7 +5105,7 @@ public class TraceabilitySuite extends HapiSuite {
                                                             .setCallingContract(
                                                                     spec.registry()
                                                                             .getContractId(create2Factory))
-                                                            .setGas(3870609)
+                                                            .setGas(3870552)
                                                             // recipient should be the
                                                             // original hollow account id as
                                                             // a contract
@@ -5151,229 +5116,23 @@ public class TraceabilitySuite extends HapiSuite {
                                                             .setCallDepth(1)
                                                             .build())),
                                     hapiGetContractBytecode);
-                            expectContractBytecode(
-                                    specName,
-                                    topLevelCallTxnRecord
-                                            .getFirstNonStakingChildRecord()
-                                            .getConsensusTimestamp(),
-                                    asContract(mergedContractIdAsString),
-                                    ByteStringUtils.wrapUnsafely(testContractInitcode.get()),
-                                    ByteStringUtils.wrapUnsafely(mergedContractBytecode.get()));
+                            allRunFor(
+                                    spec,
+                                    // The bytecode is externalized along with the synthetic ContractCreate
+                                    // child corresponding to the internal creation (index=1)
+                                    expectExplicitContractBytecode(
+                                            CREATE_2_TXN,
+                                            1,
+                                            asContract(mergedContractIdAsString),
+                                            ByteStringUtils.wrapUnsafely(testContractInitcode.get()),
+                                            ByteStringUtils.wrapUnsafely(mergedContractBytecode.get())));
                         }));
     }
 
-    @SuppressWarnings("java:S5960")
     @HapiTest
-    @Order(28)
-    final HapiSpec assertSidecars() {
-        return defaultHapiSpec("assertSidecars")
-                .given(
-                        // send a dummy transaction to trigger externalization of last sidecars
-                        cryptoCreate("externalizeFinalSidecars").delayBy(2000))
-                .when(withOpContext((spec, opLog) -> {
-                    sidecarWatcher.waitUntilFinished();
-                    sidecarWatcher.tearDown();
-                }))
-                .then(assertionsHold((spec, assertLog) -> {
-                    assertTrue(sidecarWatcher.thereAreNoMismatchedSidecars(), sidecarWatcher.getMismatchErrors());
-                    assertTrue(
-                            sidecarWatcher.thereAreNoPendingSidecars(),
-                            "There are some sidecars that have not been yet"
-                                    + " externalized in the sidecar files after all"
-                                    + " specs: " + sidecarWatcher.getPendingErrors());
-                }));
-    }
-
-    @Override
-    protected Logger getResultsLogger() {
-        return log;
-    }
-
-    private CustomSpecAssert expectContractActionSidecarFor(final String txnName, final List<ContractAction> actions) {
-        return withOpContext((spec, opLog) -> {
-            final var txnRecord = getTxnRecord(txnName);
-            allRunFor(spec, txnRecord);
-            final var consensusTimestamp = txnRecord.getResponseRecord().getConsensusTimestamp();
-            sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                    spec.getName(),
-                    TransactionSidecarRecord.newBuilder()
-                            .setConsensusTimestamp(consensusTimestamp)
-                            .setActions(ContractActions.newBuilder()
-                                    .addAllContractActions(actions)
-                                    .build())
-                            .build()));
-        });
-    }
-
-    private CustomSpecAssert expectContractStateChangesSidecarFor(
-            final String txnName, final List<StateChange> stateChanges) {
-        return withOpContext((spec, opLog) -> {
-            final var txnRecord = getTxnRecord(txnName);
-            allRunFor(spec, txnRecord);
-            final var consensusTimestamp = txnRecord.getResponseRecord().getConsensusTimestamp();
-            sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                    spec.getName(),
-                    TransactionSidecarRecord.newBuilder()
-                            .setConsensusTimestamp(consensusTimestamp)
-                            .setStateChanges(ContractStateChanges.newBuilder()
-                                    .addAllContractStateChanges(stateChangesToGrpc(stateChanges, spec))
-                                    .build())
-                            .build()));
-        });
-    }
-
-    private CustomSpecAssert expectContractBytecodeSidecarFor(
-            final String contractCreateTxn,
-            final String contractName,
-            final String binFileName,
-            final Object... constructorArgs) {
-        return withOpContext((spec, opLog) -> {
-            final var txnRecord = getTxnRecord(contractCreateTxn);
-            final var contractBytecode = getContractBytecode(contractName).saveResultTo(RUNTIME_CODE);
-            allRunFor(spec, txnRecord, contractBytecode);
-            final var consensusTimestamp = txnRecord.getResponseRecord().getConsensusTimestamp();
-            final var initCode = getInitcode(binFileName, constructorArgs);
-            sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                    spec.getName(),
-                    TransactionSidecarRecord.newBuilder()
-                            .setConsensusTimestamp(consensusTimestamp)
-                            .setBytecode(ContractBytecode.newBuilder()
-                                    .setContractId(txnRecord
-                                            .getResponseRecord()
-                                            .getContractCreateResult()
-                                            .getContractID())
-                                    .setInitcode(initCode)
-                                    .setRuntimeBytecode(
-                                            ByteString.copyFrom(spec.registry().getBytes(RUNTIME_CODE)))
-                                    .build())
-                            .build()));
-        });
-    }
-
-    private CustomSpecAssert expectFailedContractBytecodeSidecarFor(
-            final String contractCreateTxn, final String binFileName, final Object... constructorArgs) {
-        return withOpContext((spec, opLog) -> {
-            final var txnRecord = getTxnRecord(contractCreateTxn);
-            allRunFor(spec, txnRecord);
-            final var consensusTimestamp = txnRecord.getResponseRecord().getConsensusTimestamp();
-            final var initCode = getInitcode(binFileName, constructorArgs);
-            sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                    spec.getName(),
-                    TransactionSidecarRecord.newBuilder()
-                            .setConsensusTimestamp(consensusTimestamp)
-                            .setBytecode(ContractBytecode.newBuilder()
-                                    .setInitcode(initCode)
-                                    .build())
-                            .build()));
-        });
-    }
-
-    private CustomSpecAssert expectContractBytecodeWithMinimalFieldsSidecarFor(
-            final String contractCreateTxn, final String contractName) {
-        return withOpContext((spec, opLog) -> {
-            final var txnRecord = getTxnRecord(contractCreateTxn).andAllChildRecords();
-            final var contractBytecode = getContractBytecode(contractName).saveResultTo(RUNTIME_CODE);
-            allRunFor(spec, txnRecord, contractBytecode);
-            final var consensusTimestamp =
-                    txnRecord.getFirstNonStakingChildRecord().getConsensusTimestamp();
-            sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                    spec.getName(),
-                    TransactionSidecarRecord.newBuilder()
-                            .setConsensusTimestamp(consensusTimestamp)
-                            .setBytecode(ContractBytecode.newBuilder()
-                                    .setContractId(txnRecord
-                                            .getResponseRecord()
-                                            .getContractCreateResult()
-                                            .getContractID())
-                                    .setRuntimeBytecode(
-                                            ByteString.copyFrom(spec.registry().getBytes(RUNTIME_CODE)))
-                                    .build())
-                            .build()));
-        });
-    }
-
-    private CustomSpecAssert expectContractBytecode(final String contractCreateTxn, final String contractName) {
-        return withOpContext((spec, opLog) -> {
-            final var txnRecord = getTxnRecord(contractCreateTxn);
-            final var contractBytecode = getContractBytecode(contractName).saveResultTo(RUNTIME_CODE);
-            allRunFor(spec, txnRecord, contractBytecode);
-            final var consensusTimestamp = txnRecord.getResponseRecord().getConsensusTimestamp();
-            sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                    spec.getName(),
-                    TransactionSidecarRecord.newBuilder()
-                            .setConsensusTimestamp(consensusTimestamp)
-                            .setBytecode(ContractBytecode.newBuilder()
-                                    .setContractId(txnRecord
-                                            .getResponseRecord()
-                                            .getContractCreateResult()
-                                            .getContractID())
-                                    .setRuntimeBytecode(
-                                            ByteString.copyFrom(spec.registry().getBytes(RUNTIME_CODE)))
-                                    .build())
-                            .build()));
-        });
-    }
-
-    private void expectContractBytecode(
-            final String specName,
-            final Timestamp timestamp,
-            final ContractID contractID,
-            final ByteString initCode,
-            final ByteString runtimeCode) {
-        sidecarWatcher.addExpectedSidecar(new ExpectedSidecar(
-                specName,
-                TransactionSidecarRecord.newBuilder()
-                        .setConsensusTimestamp(timestamp)
-                        .setBytecode(ContractBytecode.newBuilder()
-                                // recipient should be the original hollow account
-                                // id as a contract
-                                .setContractId(contractID)
-                                .setInitcode(initCode)
-                                .setRuntimeBytecode(runtimeCode)
-                                .build())
-                        .build()));
-    }
-
-    private ByteString getInitcode(final String binFileName, final Object... constructorArgs) {
-        final var initCode = extractBytecodeUnhexed(getResourcePath(binFileName, ".bin"));
-        final var params = constructorArgs.length == 0
-                ? new byte[] {}
-                : Function.fromJson(getABIFor(FunctionType.CONSTRUCTOR, StringUtils.EMPTY, binFileName))
-                        .encodeCall(Tuple.of(constructorArgs))
-                        .array();
-        return initCode.concat(ByteStringUtils.wrapUnsafely(params.length > 4 ? stripSelector(params) : params));
-    }
-
-    private static void initializeWatcherOf(@NonNull final String recordStreamLoc) throws Exception {
-        final var absolutePath = Paths.get(recordStreamLoc).toAbsolutePath();
-        log.info("Watching for sidecars at absolute path {}", absolutePath);
-        sidecarWatcher = new SidecarWatcher(Paths.get(recordStreamLoc));
-        sidecarWatcher.watch();
-    }
-
-    private ByteString encodeFunctionCall(final String contractName, final String functionName, final Object... args) {
-        return ByteStringUtils.wrapUnsafely(
-                Function.fromJson(getABIFor(FunctionType.FUNCTION, functionName, contractName))
-                        .encodeCallWithArgs(args)
-                        .array());
-    }
-
-    byte[] encodeTuple(final String argumentsSignature, final Object... actualArguments) {
-        return TupleType.parse(argumentsSignature)
-                .encode(Tuple.of(actualArguments))
-                .array();
-    }
-
-    private ByteString uint256ReturnWithValue(final BigInteger value) {
-        return ByteStringUtils.wrapUnsafely(encodeTuple("(uint256)", value));
-    }
-
-    private Address hexedSolidityAddressToHeadlongAddress(final String hexedSolidityAddress) {
-        return Address.wrap(Address.toChecksumAddress("0x" + hexedSolidityAddress));
-    }
-
-    private ByteString formattedAssertionValue(final long value) {
-        return ByteString.copyFrom(
-                Bytes.wrap(UInt256.valueOf(value)).trimLeadingZeros().toArrayUnsafe());
+    @Order(Integer.MAX_VALUE)
+    public final Stream<DynamicTest> assertSidecars() {
+        return hapiTest(withOpContext(
+                (spec, opLog) -> requireNonNull(GLOBAL_WATCHER.get()).assertExpectations(spec)));
     }
 }
